--- a/asimplechessgame/asimplechessgame-Info.plist
+++ b/asimplechessgame/asimplechessgame-Info.plist
@@ -32,6 +32,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>ApptimizeAppKey</key>
+	<string>AzJc1FoCiUZkONtWjDo8SV4SiijSh7U</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
