Change App Display Name On Springboard
Change the name of the app on the Springboard to ‘AS Chess’ since the actually name
is too long to display.

--- a/asimplechessgame/asimplechessgame-Info.plist
+++ b/asimplechessgame/asimplechessgame-Info.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ApptimizeAppKey</key>
+	<string>AzJc1FoCiUZkONtWjDo8SV4SiijSh7U</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>AS Chess</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -32,13 +34,9 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
-	<key>ApptimizeAppKey</key>
-	<string>AzJc1FoCiUZkONtWjDo8SV4SiijSh7U</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
