--- a/asimplechessgame/asimplechessgame-Info.plist
+++ b/asimplechessgame/asimplechessgame-Info.plist
@@ -34,6 +34,10 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PokemonGB.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
