Add Target For Travis CI Scheme
Add in asimplechessgameTests target to the build for Travis CI scheme
because it is need to do a proper build of the project

--- a/asimplechessgame.xcodeproj/xcshareddata/xcschemes/TravisCI.xcscheme
+++ b/asimplechessgame.xcodeproj/xcshareddata/xcschemes/TravisCI.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:asimplechessgame.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9612DACD1936D32700D69357"
+               BuildableName = "asimplechessgameTests.xctest"
+               BlueprintName = "asimplechessgameTests"
+               ReferencedContainer = "container:asimplechessgame.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
