--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 xcode_project: asimplechessgame.xcodeproj # path to your xcodeproj folder
-xcode_scheme: asimplechessgameTests
+xcode_scheme: asimplechessgame
