Fix Travis CI Config File Fix Error With Key Chain
Fix Travis CI config file to fix an error with Key Chain as this is
causing an error in the build.

--- a/asimplechessgame.xcodeproj/xcshareddata/xcschemes/asimplechessgameTests.xcscheme
+++ b/asimplechessgame.xcodeproj/xcshareddata/xcschemes/asimplechessgameTests.xcscheme
@@ -74,7 +74,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable>
          <BuildableReference
@@ -90,7 +90,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
