--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: objective-c
-xcode_project: asimplechessgame.xcodeproj # path to your xcodeproj folder
+xcode_project: asimplechessgame.xcodeproj
 xcode_scheme: asimplechessgameTests
+before_install:
+ - KEY_CHAIN=ios-build.keychain
+ - security create-keychain -p travis $KEY_CHAIN
+# Make the keychain the default so identities are found
+ - security default-keychain -s $KEY_CHAIN
+# Unlock the keychain
+ - security unlock-keychain -p travis $KEY_CHAIN
+# Set keychain locking timeout to 3600 seconds
+ - security set-keychain-settings -t 3600 -u $KEY_CHAIN
