Add before_script Event In Travis CI Config
Add before_script instated of before_install Event In Travis CI Config
because the Key chain needs to be added before build happens.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 xcode_project: asimplechessgame.xcodeproj
 xcode_scheme: asimplechessgameTests
-before_install:
+before_script:
  - KEY_CHAIN=ios-build.keychain
  - security create-keychain -p travis $KEY_CHAIN
 # Make the keychain the default so identities are found
