Remove Test Build Scheme
Because both schemes are the same remove the test scheme and made the
default scheme share able.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 
 script: 
- - xctool -project asimplechessgame.xcodeproj -scheme 'asimplechessgameTests' -configuration Release -sdk iphonesimulator -arch i386 build
+ - xctool -project asimplechessgame.xcodeproj -scheme 'asimplechessgame' -configuration Release -sdk iphonesimulator -arch i386 build
