--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: objective-c
-
-script: 
- - xctool -project asimplechessgame.xcodeproj -scheme 'asimplechessgame' test -configuration Debug -sdk iphonesimulator -arch i386 build
+compiler:
+  - gcc
+before_install:
+  - brew update
+  - brew install pyenv
+  - eval "$(pyenv init -)"
+  - pyenv install 2.7.6
+  - pyenv global 2.7.6
+  - pyenv rehash
+  - pip install cpp-coveralls
+  - pyenv rehash
+script:
+  - ./configure --enable-gcov && make && make check
+   - xctool -project asimplechessgame.xcodeproj -scheme 'asimplechessgame' test -configuration Debug -sdk iphonesimulator -arch i386 build
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
