--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: objective-c
 before_install:
   - sudo easy_install cpp-coveralls
 script:
-   - xctool -project asimplechessgame.xcodeproj -scheme 'asimplechessgame' test ONLY_ACTIVE_ARCH=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -configuration Debug -sdk iphonesimulator -arch i386 build
+   - xctool -project asimplechessgame.xcodeproj -scheme 'TravisCI' test ONLY_ACTIVE_ARCH=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -configuration Debug -sdk iphonesimulator -arch i386 build
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - ./script/coveralls.sh
