--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_install:
 script:
    - xctool -project asimplechessgame.xcodeproj -scheme 'asimplechessgame' test ONLY_ACTIVE_ARCH=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -configuration Debug -sdk iphonesimulator -arch i386 build
 after_success:
-  - coveralls --exclude Apptimize.framework --exclude lib --exclude tests --gcov-options '\-lpd'
+  - coveralls -x '.m' --exclude Apptimize.framework --exclude lib --exclude tests --gcov-options '\-lp'
