Add GCov Build Scheme
Add GCov build scheme to create code coverage files for Coveralls to
use in order to display what code has been cover

--- a/asimplechessgame.xcodeproj/xcshareddata/xcschemes/GCov.xcscheme
+++ b/asimplechessgame.xcodeproj/xcshareddata/xcschemes/GCov.xcscheme
@@ -73,7 +73,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
+      buildConfiguration = "GCov_Build"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
@@ -86,6 +86,13 @@
             ReferencedContainer = "container:asimplechessgame.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "GCOV_PREFIX_STRIP"
+            value = "7"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
