--- a/asimplechessgame.xcodeproj/xcshareddata/xcschemes/GCov.xcscheme
+++ b/asimplechessgame.xcodeproj/xcshareddata/xcschemes/GCov.xcscheme
@@ -3,8 +3,8 @@
    LastUpgradeVersion = "0510"
    version = "1.7">
    <BuildAction
-      parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      parallelizeBuildables = "NO"
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
