--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: objective-c
 before_install:
   - sudo easy_install cpp-coveralls
 script:
-  - xctool test ONLY_ACTIVE_ARCH=NO GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
+   - xctool -project asimplechessgame.xcodeproj -scheme 'GCov' test -configuration Debug -sdk iphonesimulator -arch i386 build
 after_success:
-  - ./script/coveralls.sh
+  - coveralls -x '.m' --exclude Apptimize.framework --exclude lib --exclude tests
